Clase de Proyecto

--- a/index.html
+++ b/index.html
@@ -4,8 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header class="header">
+       <img src="./public/logo.png" alt="Logo ADEL" height="100px" class="logo">
+
+       <Nav class="navegacion">
+        <h3>Inicio</h3>
+        <h3>Productos</h3>
+        <h3>Nosotros</h3>
+        <h3>Galeria</h3>
+        <h3>Contacto</h3>
+       </Nav>
+    </header>
+    <aside class="aside-nav">
+        <img src="./public/logo.png" alt="Logo ADEL" height="100px" class="logo">
+        <Nav class="navegacion1">
+            <h3>Inicio</h3>
+            <h3>Productos</h3>
+            <h3>Nosotros</h3>
+            <h3>Galeria</h3>
+            <h3>Contacto</h3>
+           </Nav>
+    </aside>
 </body>
 </html>
