--- a/galeria.html
+++ b/galeria.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ADEL</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -42,6 +42,10 @@
              <h3>Galeria</h3>
              <h3>Contacto</h3>
             </Nav>
-     </aside> 
+     </aside>
+
+    <main>
+
+    </main>
 </body>
 </html>
