--- a/nosotros.html
+++ b/nosotros.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ADEL</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -47,9 +47,9 @@
     <main class="sobre-nosotras">
       <h1> Nuetra Historia </h1>
       <p class="parrafo"> Somos madre e hija, y ADEL nació de nuestro deseo de emprender juntas y compartir una pasión: la marroquinería de calidad, con estilo y propósito.</p>
-      <p class="parrafo2">El nombre ADEL representa algo muy especial para nosotras: las iniciales de los hermanos de la familia, una forma de llevar siempre presente lo que somos y de dónde venimos.</p> 
-      <p class="parrafo3" >Trabajamos con una pequeña fábrica en Buenos Aires que elabora cada producto con dedicación, buenos materiales y un enfoque artesanal. Nosotras seleccionamos cada pieza con mucho cuidado,buscando ofrecer variedad, diseño y durabilidad en cada modelo.</p>
-      <p class="parrafo4" >En ADEL no solo vendemos marroquinería: queremos acercarte artículos que te acompañen en tu día a día y que cuenten una historia. Gracias por elegirnos y ser parte de este camino familiar.</p>
+      <p class="parrafo">El nombre ADEL representa algo muy especial para nosotras: las iniciales de los hermanos de la familia, una forma de llevar siempre presente lo que somos y de dónde venimos.</p> 
+      <p class="parrafo" >Trabajamos con una pequeña fábrica en Buenos Aires que elabora cada producto con dedicación, buenos materiales y un enfoque artesanal. Nosotras seleccionamos cada pieza con mucho cuidado,buscando ofrecer variedad, diseño y durabilidad en cada modelo.</p>
+      <p class="parrafo" >En ADEL no solo vendemos marroquinería: queremos acercarte artículos que te acompañen en tu día a día y que cuenten una historia. Gracias por elegirnos y ser parte de este camino familiar.</p>
         
     </main>
 </body>
