--- a/contactos.html
+++ b/contactos.html
@@ -48,7 +48,7 @@
       <article>
         <h3>Contactanos</h3>
       
-        <form action="">
+        <form>
           <div>
             <label for="name">Nombre y Apellido</label>
             <input type="text" id="Nombre" name="Nombre" required placeholder="Adel Marroquineria">
