--- a/productos.html
+++ b/productos.html
@@ -48,28 +48,28 @@
     <section class="todos-productos">
       
       <article class="article1">
-        <img src="./public/morral-negro.png" alt="morral negro" height="300px">
+        <img src="./public/morral-negro.png" alt="morral negro" class="imagen-productos" >
         <h3> Morrales de Ecocuero</h3>
         <p>Largo: 25cm Alto: 20cm Ancho: 10cm </p>
         <p> $12.000</p>
       </article>
 
       <article class="article1"> 
-        <img src="./public/morral-tipo.png" alt="Morral tipo Mochila" height="300px">
+        <img src="./public/morral-tipo.png" alt="Morral tipo Mochila" class="imagen-productos" >
         <h3> Morrales tipo Mochila </h3>
         <p> Largo: 25cm Alto: 30cm Ancho: 10cm</p>
         <p> $14.000</p>
       </article>
 
       <article class="article1">
-        <img src="./public/mochila-m-marron.png" alt="Mochila Mediana" height="300px">
+        <img src="./public/mochila-m-marron.png" alt="Mochila Mediana" class="imagen-productos">
         <h3> Mochilas Medianas de ecocuero</h3>
         <p>Largo: 25cm Alto: 30cm Ancho: 10cm </p>
         <p>$17.000</p>
       </article>
 
       <article class="article1">
-        <img src="./public/mochila-g-negra.png" alt="Mochila Grande" height="300px">
+        <img src="./public/mochila-g-negra.png" alt="Mochila Grande" class="imagen-productos">
         <h3> Mochilas Grandes de ecocuero</h3>
         <p>Largo: 30cm Alto: 35cm Ancho: 10cm </p>
         <p>$23.000</p>
